--- a/views/includes/navigation2.ejs
+++ b/views/includes/navigation2.ejs
@@ -1,6 +1,86 @@
 
 <div class="nav-bar-container">
 
+<div class="mobile-nav">
+    <div class="mobile-bar">
+        <script>
+            function dropdown(){
+            const content = document.getElementById('menu-content')
+            if(content.style.display=="none"){
+            content.style.display="block"
+            }
+            if(content.style.display=="block"){
+                content.style.display="none"
+            }
+            
+            
+            }
+
+
+
+
+
+    document.getElementById('menu-content').onclick = showDropDown;
+
+function showDropDown(e){
+     document.getElementById('dropdown-btn').onclick = function(){};
+     if(e.stopPropagation)
+         e.stopPropagation();   // W3C model
+     else
+         e.cancelBubble = true; // IE model
+
+     document.getElementById("menu-content").style.display = "block";
+     document.onclick = function(e){
+         var ele = document.elementFromPoint(e.clientX, e.clientY);
+         if(ele == document.getElementById("dropdown-btn")){
+             hideDropDown();
+             return;
+         }
+         do{
+             if(ele == document.getElementById("menu-content"))
+                 return;
+         }while(ele = ele.parentNode);
+         hideDropDown();
+     };
+}
+
+function hideDropDown(){
+    document.onclick = function(){};
+    document.getElementById("menu-content").style.display = "none";
+    document.getElementById('dropdown-btn').onclick = showDropDown;
+}
+            
+        </script>
+<button class="dropdown-btn" onclick="showDropDown"><i class="fad fa-bars"></i></button>
+
+<div  id="menu-content" class="menu-content">
+    <% if (locals.isLoggedIn == true) { %>
+        <li class="main-header__item"><a  class = "<%= path === '/gradient/create' ? 'active' : ''%>"href="/gradient/create"><i class="fad fa-pencil-paintbrush"></i> New</a></li>
+        <li class="main-header__item"><a class = "<%= path === '/users/myProfile' ? 'active' : ''%>" href="/users/myProfile/<%=locals.user._id%>"><i class="fad fa-user"></i> Profile</a></li>
+        <li class="main-header__item"><a  class = "<%= path === '/gradient/library' ? 'active' : ''%>"href="/gradient/library"><i class="fad fa-books"></i> Explore</a></li>
+
+        <li class="main-header__item"><a class = "<%= path === '/users/find' ? 'active' : ''%>" href="/users/find"><i class="fad fa-search"></i> Find people</a></li>
+        
+     <% if (locals.isAdmin == true) { %>
+         <li class="main-header__item"><a  class = "<%= path === '/admin/users' ? 'active' : ''%>"href="/admin/users"><i class="fad fa-users"></i> Users</a></li>
+     <% } %>
+
+        <il class="main-header__item"><form action="/users/logout" method="post" class="main-header__item"><input type ="hidden" name ="_csrf" value= '<%=csrfToken%>'><button class="nav_button" type="submit"><i class="fad fa-user-slash"></i> Logout</button></form></il>
+        
+
+    <% } else { %> 
+         <li class="main-header__item"><a class = "<%= path === '/' ? 'active' : ''%>" href="/"><i class="fad fa-home-lg-alt"></i> GG</li>
+            <li class="main-header__item"><a  class = "<%= path === '/gradient/library' ? 'active' : ''%>"href="/gradient/library"><i class="fad fa-books"></i> Explore</a></li>
+        <li class="main-header__item"><a  class = "<%= path === '/users/login' ? 'active' : ''%>"href="/users/login"><i class="fad fa-user"></i> Login</a></li>
+        <li class="main-header__item"><a class = "<%= path === '/users/sign-up' ? 'active' : ''%>" href="/users/sign-up"><i class="fad fa-user-plus"></i> Sign-up</a></li>
+        <% } %> 
+
+</div>
+
+</div>
+</div>
+
+    <div class="big-nav">
     <header class="main-header">
     <nav class="main-header__nav">
         <ul class="main-header__item-list">
@@ -30,5 +110,6 @@
        </nav>
     </header>
 
+</div>
 </div>
 
