--- a/views/includes/search2.ejs
+++ b/views/includes/search2.ejs
@@ -2,7 +2,7 @@
 
   <form class="search-form" action="/gradient/search" method="post">
     <input id="query"  class="search-input" type="search" name="query" placeholder="search for gradients...">
-    <button class="btn-text" type="submit">Search</button>
+    <button class="search-btn" type="submit"><i class="fas fa-search"></i></button>
     <input type="hidden" name="_csrf" value='<%=csrfToken%>'>
   </form>
 </div>
