--- a/views/includes/profile.ejs
+++ b/views/includes/profile.ejs
@@ -3,6 +3,10 @@
       <h1> <%=user.name%></h1>
       <input type="hidden" name="_csrf" value='<%=csrfToken%>'>
     
+      <section class="pagination">
+        <a href="/?page=1">1</a>
+        <a href="/?page=2">2</a>
+      </section>
     
       <div class="profile-nav-container">
       
