--- a/views/includes/user-search.ejs
+++ b/views/includes/user-search.ejs
@@ -1,7 +1,7 @@
 <div class="search-container">
     <form class="search-form" action="/users/find" method="post">
       <input id="query"  class="search-input" type="search" name="query" placeholder="Find people...">
-      <button class="btn-text" type="submit">Search</button>
+      <button class="search-btn" type="submit"><i class="fas fa-search"></i></button>
       <input type="hidden" name="_csrf" value='<%=csrfToken%>'>
     </form>
   </div>
