--- a/public/css/main.css
+++ b/public/css/main.css
@@ -258,6 +258,7 @@ input{
     justify-content: center;
     box-sizing: border-box;
     display: inline-block;
+    padding: 10px;
 }
 
 
@@ -349,7 +350,6 @@ select{
 
 .profile-flex{
     display: flex;
-    align-items: center;
     justify-content: center;
     width: 100%;
     height: 100%;
@@ -407,6 +407,8 @@ ul{
     padding: 10px;
     display: flex;
     flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
 }
 
 .small-canvas{
