--- a/views/includes/profile.ejs
+++ b/views/includes/profile.ejs
@@ -3,11 +3,6 @@
       <h1> <%=user.name%></h1>
       <input type="hidden" name="_csrf" value='<%=csrfToken%>'>
     
-      <section class="pagination">
-        <a href="/?page=1">1</a>
-        <a href="/?page=2">2</a>
-      </section>
-    
       <div class="profile-nav-container">
       
       <button class="profile-a" onclick ="location.assign('/gradient/favorites/<%=user._id%>')">Favorites <i class="fas fa-heart"></i></button>
@@ -20,6 +15,7 @@
       <div class="form-group">
         <%- include('library.ejs')%>
       </div>
+      <%- include('pagination.ejs') %> 
 
 
 
