--- a/public/css/main.css
+++ b/public/css/main.css
@@ -337,6 +337,12 @@ select{
 }
 .btns-container{
     display: flex;
+    padding: 10px;
+    gap: 10px;
+}
+.creator-container{
+ padding: 10px;
+ gap: 10px;
 }
 
 .info-text{
