--- a/views/includes/head.ejs
+++ b/views/includes/head.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title><%=pageTitle%></title> 
+    <title>Griffin Gradients</title> 
     <link rel = "stylesheet" href = "/css/main.css">
     <link rel = "stylsheet" href = "/css/forms.css">
     <link rel = "icon" href = "/favicon.ico">
