--- a/views/includes/pagination.ejs
+++ b/views/includes/pagination.ejs
@@ -1,3 +1,4 @@
+<div class="pagination-container">
 <section class="pagination">
     <% if(currentPage!=1&& prevPage!=1){%>
     <a href="<%=urlBit%>/?page=1">1</a>
@@ -15,3 +16,4 @@
       <a href="<%=urlBit%>/?page=<%=lastPage%>"><%=lastPage%></a>
       <% } %> 
   </section>
+</div>
