--- a/public/css/main.css
+++ b/public/css/main.css
@@ -601,3 +601,15 @@ ul{
     justify-content: center;
     padding: 10px;
 }
+
+.user-icon{
+    font-size: 20px;
+    color:#4a018a;
+}
+
+.user-icon-container{
+    padding: 10px;
+    display: flex;
+   justify-content: center;
+   align-items: center;
+}
