--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,7 +12,7 @@
         <div class="home">
         <div id = "main" class="main">
          
-          <div class="home-title">Create your own graients now!</div>
+          <div class="home-title">Create your own gradients now!</div>
         </div>
         </div>
         
